# permavid

./: .gitignore  .gitmodules  PRISMA_SETUP.md  README.md  cleanup.ps1  download_icons.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  permavid_local.sqlite-shm  permavid_local.sqlite-wal  pnpm-lock.yaml  tsconfig.json
.cursor/rules/: main.mdc
.trae/rules/: project_rules.md
docs/: AUTH_SETUP.md
electron/: main.ts  preload.ts
permavid/: package.json
permavid-index-server/: package-lock.json  package.json  pnpm-lock.yaml  vercel.json
permavid-index-server/api/: _redirects  add.js  check.js  index.js
permavid-index-server/prisma/: schema.prisma
permavid-index-server/prisma/migrations/20250503083405_hello_world/: migration.sql
permavid-index-server/public/: index.html
permavid-index-server/utils/: canonicalizeUrl.js
prisma/: schema.prisma
prisma/migrations/20250904144544_new/: migration.sql
scripts/: db-init.js  neon-db-init.js
src/app/: auth-guard.tsx  auth-provider.tsx  layout.tsx  page.tsx  tauri-integration.tsx
src/app/api/add/: route.ts
src/app/api/archives/: route.ts
src/app/api/archives/[id]/: route.ts
src/app/api/archives/add/: route.ts
src/app/api/archives/check/: route.ts
src/app/api/auth/: static-auth.ts
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/cancel/[id]/: route.ts
src/app/api/gallery/: route.ts
src/app/api/queue/: route.ts
src/app/api/queue/clear/: route.ts
src/app/api/restart-encoding/[id]/: route.ts
src/app/api/retry/[id]/: route.ts
src/app/api/settings/: route.ts
src/app/api/upload/[id]/: route.ts
src/app/api/users/: route.ts
src/app/archive/[id]/: page.tsx
src/app/archives/: page.tsx
src/app/auth/callback/: page.tsx
src/app/auth/signin/: page.tsx
src/app/gallery/: page.tsx
src/app/tauri/: page.tsx
src/app/tauri-test/: page.tsx
src/components/: Archives.tsx  ImportDataButton.tsx  UserProfile.tsx
src/lib/: db.ts  queue.ts  settings-helper.ts  settings.ts  tauri-api.ts  tauri.ts
src/types/: next-auth.d.ts  tauri.d.ts
src/utils/: filesvc.js
tauri/: Cargo.toml  README.md  build.rs  index.html  simple.html  tauri.conf.json
tauri/src/: db.rs  main.rs
