[package]
name = "permavid"
version = "0.1.0"
description = "PermaVid: Local Video Archiving Tool"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/FahadBinHussain/PermaVid"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "fs-all", "shell-open", "http-all", "dialog-all"] }
tokio-postgres = "0.7.10"
deadpool-postgres = "0.12.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
regex = "1.10.2"
lazy_static = "1.4.0"
glob = "0.3.1"
dirs = "5.0.1"
dirs-next = "2.0.0"
infer = "0.13.0"
home = "0.5.9"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
futures-util = { version = "0.3", features = ["io"] }
bytes = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols 
